test/libsolidity/syntaxTests/operators/userDefined/calling_operator_as_attached_function_via_function_name.sol
type Int is int16;

using {add as +} for Int;

function add(Int, Int) returns (Int) {}

function f() {
    Int a;
    a.add(a);
}
// ----
// TypeError 9582: (118-123): Member "add" not found or not visible after argument-dependent lookup in Int.
